--- a/css/style.css
+++ b/css/style.css
@@ -266,7 +266,7 @@ section.contact ul {
 }
 
 
-@media screen and (min-width: 800px) {
+@media only screen and (min-width: 800px) {
 	@supports (display: grid) {
 
 		.site {
