--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 img {
 	display: block;
 	border: 0;
-	width: 100%;
+	max-width: 100%;
 	height: auto;
 }
 
@@ -125,7 +125,7 @@ a {
 .ds {
 	padding-top: 1em;
 	padding-bottom: .5em;
-	width: 50%;
+	max-width: 50%;
 	
   transition: .5s;
 }
@@ -156,7 +156,7 @@ a {
 	top: 1em;
 	right: 1em;
 	height: 100px;
-	width: 100px;
+	max-width: 100px;
 	
 }
 
@@ -182,14 +182,14 @@ a {
 }
 
 .shopi {
-	width: 65%;
+	max-width: 65%;
 	margin-right: auto;
 	margin-left: auto;
 }
 
 
 .flyer {
-	width: 65%;
+	max-width: 65%;
 	margin-left: auto;
 	margin-right: auto;
 	padding-bottom: 1em;
@@ -223,7 +223,7 @@ section.contact input[type=text],
 section.contact input[type=email],
 section.contact input[type=submit],
 section.contact textarea {
-    width: 100%;
+    max-width: 100%;
     padding: 1em;
     font-size: 1em;
     border: 1px solid #505050;align-self:}
@@ -236,7 +236,7 @@ section.contact input[type=submit] {
     background: #1a1a1a;
     color: #505050;
     border-radius: 8px;
-	width: 60%;}
+	max-width: 60%;}
 
 section.contact input[type=submit]:hover {
     font-size: 1.2em;
