--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,7 @@ a {
 }
 
 .shopi {
-	max-width: 65%;
+	max-width: 90%;
 	margin-right: auto;
 	margin-left: auto;
 }
@@ -218,6 +218,26 @@ a {
 	padding: 1em;
 	border: 3px solid black;
 	color: black;
+}
+
+
+
+.column {
+    float: left;
+    width: 45%;
+    padding: 10px;
+    min-height: 300px; 
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+    text-align: center;
+}
+
+.row p {
+	text-align: center;
 }
 
 section.contact {
@@ -316,5 +336,11 @@ section.contact ul {
 			grid-column: 5/8;
 		}
 
+	}
+}
+
+@media only screen and (min-width: 380px){
+	.site-title {
+		font-size: 1.4em;
 	}
 }
