--- a/css/style.css
+++ b/css/style.css
@@ -258,7 +258,7 @@ section.contact form {
     color: #505050;
     text-align: left;
     margin-top: 2em;
-	padding-right: 2em;}
+	padding-right: 1em;}
 
 section.contact form label {
     display: block;
@@ -282,7 +282,7 @@ section.contact textarea {height: 150px;}
 section.contact input[type=submit] {
     font-size: 1.2em;
     text-transform: uppercase;
-    background: #1a1a1a;
+    background: white
     color: #505050;
     border-radius: 8px;
 	max-width: 60%;}
