--- a/css/style.css
+++ b/css/style.css
@@ -245,9 +245,9 @@ a {
 .koop {
 	background-color: #6B232C;
 	color: white;
-	margin: 1em 1em 1em 0;
+	margin: 1em 1em 2em 0;
 	padding: .5em;
-	border-radius:1em;
+	
 }
 
 section.contact {
@@ -349,8 +349,17 @@ section.contact ul {
 	}
 }
 
-@media only screen and (min-width: 380px){
+@media only screen and (max-width: 500px){
 	.site-title {
 		font-size: 1.4em;
 	}
+
+	.column {
+    float: left;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    
+    min-height: 300px; 
+}
 }
